--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-vue-vite",
+  "name": "match3",
   "version": "1.0.0",
   "main": "dist/main/index.cjs",
   "author": "xuemo",
@@ -50,6 +50,7 @@
     "axios": "^0.27.2",
     "element-plus": "^2.2.6",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "mande": "^2.0.2",
     "naive-ui": "^2.30.5",
     "node-sass": "^7.0.1",
