--- a/package.json
+++ b/package.json
@@ -19,20 +19,31 @@
     "@playwright/test": "^1.22.2",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.0.0",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.2",
+    "axios": "^0.27.2",
     "electron": "19.0.1",
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
+    "element-plus": "^2.2.6",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "nano-staged": "^0.8.0",
+    "node-sass": "^7.0.1",
+    "pinia": "^2.0.14",
     "sass": "^1.52.3",
     "simple-git-hooks": "^2.8.0",
     "typescript": "^4.7.2",
     "unplugin-auto-import": "^0.8.8",
+    "unplugin-element-plus": "^0.4.0",
     "unplugin-vue-components": "^0.19.6",
     "vite": "^2.9.8",
     "vite-plugin-electron": "^0.4.5",
+    "vite-plugin-electron-renderer": "^0.5.0",
     "vite-plugin-resolve": "^2.1.2",
     "vue": "^3.2.36",
+    "vue-i18n": "^9.1.10",
+    "vue-router": "^4.0.16",
     "vue-tsc": "^0.35.2"
   },
   "env": {
@@ -47,15 +58,6 @@
     "vue"
   ],
   "dependencies": {
-    "axios": "^0.27.2",
-    "element-plus": "^2.2.6",
-    "js-cookie": "^3.0.1",
-    "lodash": "^4.17.21",
-    "mande": "^2.0.2",
-    "node-sass": "^7.0.1",
-    "pinia": "^2.0.14",
-    "unplugin-element-plus": "^0.4.0",
-    "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.16"
+    "nprogress": "^0.2.0"
   }
 }
